# mpy3

./: .gitignore  LICENSE  README.md  TODO.md  TODOS.md  pyproject.toml  requirements.txt
src/: app.py  appstate.py  constants.py  duration.py  enums.py  events.py  log.py  main.py  medialist.py  output.py  playback.py  player.py  playlist.py  q.py  status.py  terminalio.py  utils.py
src/mpy3/: __main__.py  app.py  cli.py  event_dispatcher.py  input.py  player.py  router.py  utils.py
src/mpy3/gui/: colors.py  core.py  input_handler.py  utils.py  widgets.py
src/mpy3/gui/widgets/: __init__.py  base.py  box.py  button.py  canvas.py  geometry.py  screen.py  text.py  types.py
src/mpy3/views/: base.py  home_page.py  player_page.py
