[project]
name = "mpy3"
version = "0.1.0"
description = ""
authors = [
    {name = "clairox",email = "33704909+clairox@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "mpy3", from = "src"}]
scripts = {mpy3 = "mpy3.__main__:main"}



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
