[project]
name = "mpy3"
version = "0.1.0"
description = ""
authors = [
    {name = "clairox",email = "33704909+clairox@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click (>=8.2.1,<9.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "pyaudio (>=0.2.14,<0.3.0)"
]

[tool.poetry]
packages = [{include = "mpy3", from = "src"}]
scripts = {mpy3 = "mpy3.__main__:main"}



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
